nav bar collapse fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 }
 
 .add-button {
-  margin-left: 75px;
+  margin-left: 110px;
 }
 
 ul.reviews {
